--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A simple Hacker News implementation in the NX framework">
-    <meta name="author" content="Miklos Bertalan">
-    <title>Hacker News implemented in NX</title>
+    <meta name="description" content="A simple WP Plugin ranking for WordPress Developers">
+    <meta name="author" content="Will Preston">
+    <title>WordPress Plugin Ranking</title>
 
     <!-- the animate.css animation/keyframe collection is used to simplify animations in the app -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -16,6 +16,6 @@
     <style>:unresolved { display: none; }</style>
   <body>
     <!-- this is our root component, it is registered in /components/hackerNews -->
-    <hacker-news></hacker-news>
+    <wo-plugins></wp-plugins>
   </body>
 </html>
