--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <style>:unresolved { display: none; }</style>
   <body>
     <!-- this is our root component, it is registered in /components/hackerNews -->
-    <hacker-news></hacker-news>
+    <wp-plugins></wp-plugins>
   </body>
 </html>
