--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A simple Hacker News implementation in the NX framework">
-    <meta name="author" content="Miklos Bertalan">
-    <title>Hacker News implemented in NX</title>
+    <meta name="description" content="A simple WP Plugin ranking">
+    <meta name="author" content="Will Preston">
+    <title>WP Plugin Ranking</title>
 
     <!-- the animate.css animation/keyframe collection is used to simplify animations in the app -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -15,7 +15,7 @@
     <!-- this style is used to hide content until NX is fully loaded -->
     <style>:unresolved { display: none; }</style>
   <body>
-    <!-- this is our root component, it is registered in /components/hackerNews -->
+    <!-- this is our root component, it is registered in /components/wp-plugins -->
     <wp-plugins></wp-plugins>
   </body>
 </html>
